dataset1235/2025-2/2868285114/users/221116065/executions/3649835072_3455942218.log
== SUBMISSION (2025-08-23 22:24:57)
-- CODE: 
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo * 8) + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:22:47)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45
saldo = jogo - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
-45.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
-45.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
-45.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
-45.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
-45.0
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
-45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:24:49)
-- CODE: 
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo * 8) + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 22:25:34)
-- CODE: 
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo * 8 + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 22:25:35)
-- CODE: 
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo * 8 + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 22:26:05)
-- CODE: 
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo * 8 + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:20:17)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 6
    disponivel = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 6
    disponivel = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 6
    disponivel = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 6
    disponivel = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 6
    disponivel = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 6
    disponivel = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:20:35)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
755.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
232.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
3799.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
875968.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
23.799999999999997
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
335.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:22:07)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
755.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
232.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
3799.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
875968.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
23.799999999999997
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
335.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:25:19)
-- CODE: 
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo * 8) + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:25:08)
-- CODE: 
jogo = float(input("Qual o valor unitario do jogo? "))
disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (jogo * 8) + 45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
